--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -56,7 +56,7 @@ jobs:
           VERSION="${{ steps.versions.outputs.VERSION_TO_BUILD }}"
           LATEST_FLAG=true
 
-          echo "Triggering build for version $VERSION (LATEST=$LATEST_FLAG)"
+          echo "Triggering build for version v$VERSION (LATEST=$LATEST_FLAG)"
           curl -X POST \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: token ${{ secrets.GHCR_PAT }}" \
